User 도메인 및 Repository 추가, 회원 기능 구현 기반 작업