@@ -1,14 +1,18 @@
 package com.sec.movietalk.review.service;
 
-import com.sec.movietalk.review.dto.*;
 import com.sec.movietalk.common.domain.review.Review;
+import com.sec.movietalk.common.domain.user.User;
+import com.sec.movietalk.review.dto.ReviewCreateRequest;
+import com.sec.movietalk.review.dto.ReviewUpdateRequest;
+import com.sec.movietalk.review.dto.ReviewListResponse;
+import com.sec.movietalk.review.dto.ReviewResponse;
 import com.sec.movietalk.review.repository.ReviewRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,35 +20,55 @@ public class ReviewService {
 
     private final ReviewRepository reviewRepository;
 
-    @Transactional
-    public Long createReview(ReviewCreateRequest request, Long userId) {
-        Review review = new Review(request.getMovieId(), userId, request.getContent());
-        return reviewRepository.save(review).getId();
-    }
-
-    @Transactional
-    public void updateReview(Long id, ReviewUpdateRequest request) {
-        Review review = reviewRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("해당 리뷰 없음"));
-        review.setContent(request.getContent());
-    }
-
-    @Transactional
-    public void deleteReview(Long id) {
-        reviewRepository.deleteById(id);
-    }
-
-    @Transactional(readOnly = true)
-    public ReviewResponse getReview(Long id) {
-        Review review = reviewRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("해당 리뷰 없음"));
-        return new ReviewResponse(review);
-    }
-
     @Transactional(readOnly = true)
     public List<ReviewListResponse> getAllReviews() {
-        return reviewRepository.findAll().stream()
-                .map(ReviewListResponse::new)
-                .collect(Collectors.toList());
+        return reviewRepository.findAll()
+                .stream()
+                .map(ReviewListResponse::fromEntity)
+                .toList();
+    }
+
+    @Transactional(readOnly = true)
+    public ReviewResponse getReviewById(Long reviewId) {
+        Review review = reviewRepository.findById(reviewId)
+                .orElseThrow(() -> new RuntimeException("리뷰를 찾을 수 없습니다."));
+        return ReviewResponse.fromEntity(review);
+    }
+
+    @Transactional
+    public void createReview(ReviewCreateRequest request) {
+        Review review = Review.builder()
+                .movieId(request.getMovieId())
+                .user(new User(request.getUserId()))
+                .content(request.getContent())
+                .createdAt(LocalDateTime.now())
+                .build();
+
+        reviewRepository.save(review);
+    }
+
+    @Transactional
+    public void updateReview(ReviewUpdateRequest request) {
+        Review review = reviewRepository.findById(request.getReviewId())
+                .orElseThrow(() -> new RuntimeException("리뷰를 찾을 수 없습니다."));
+
+        review.setContent(request.getContent());
+        review.setUpdatedAt(LocalDateTime.now());
+    }
+
+    @Transactional
+    public void deleteReview(Long reviewId) {
+        reviewRepository.deleteById(reviewId);
     }
 }
+
+
+
+
+
+
+
+
+
+
+
